filled with correct swagger annotations
